<resources>
    <string name="app_name">SmartLottery</string>
    <string name="ssq">双色球</string>
    <string name="dlt">大乐透</string>
    <string name="fc3d">3D</string>
    <string name="kl8">快乐8</string>
    <string name="lottery_name_placeholder">双色球</string>
    <string name="issue_number_placeholder">第2023135期</string>
    <string name="draw_date_placeholder">开奖日期: 2023-11-21</string>
    <string name="jackpot_pool_placeholder">奖池: 21.5亿</string>
    <string name="ai_prediction_title">AI智能号码预测</string>
    <string name="ai_recommendation">AI推荐号码</string>
    <string name="user_thought_hint">说出你的想法让AI帮你分析趋势吧</string>
    <string name="analyze_button_text">AI分析</string>
    <string name="cot_analysis_placeholder">AI思考过程...</string>
</resources>
